--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   http: ^0.13.4
   mocktail: ^0.3.0
   flutter_hooks: ^0.18.4
+  firebase_core: ^1.18.0
+  firebase_auth: ^3.3.20
+  cloud_firestore: ^3.1.18
 
 dev_dependencies:
   flutter_test:
