--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,8 +45,13 @@ dependencies:
 
   freezed_annotation: ^2.0.3
 
+  # httpクライアント
   http: ^0.13.4
+  dio: ^4.0.6
+  chopper: ^4.0.6
+  chopper_generator: ^4.0.6
 
+ # テスト
   mocktail: ^0.3.0
 
   firebase_core: ^1.18.0
