--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,7 +30,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -39,26 +38,22 @@ dependencies:
   flutter_html: ^2.2.1
 
   # 状態管理
-  # riverpod: ^1.0.3
-  # flutter_riverpod: ^1.0.4
-  flutter_hooks: ^0.18.4
-  hooks_riverpod: ^1.0.4
-  get_it: ^7.2.0
+  riverpod: ^2.6.1
+  flutter_riverpod: ^2.6.1
+  flutter_hooks: ^0.20.5
+  hooks_riverpod: ^2.6.1
 
   freezed_annotation: ^2.0.3
 
   # httpクライアント
-  http: ^0.13.4
-  dio: ^4.0.6
-  chopper: ^4.0.6
-  chopper_generator: ^4.0.6
+  http: ^1.3.0
+  dio: ^5.8.0+1
+  chopper: ^8.1.0
+  chopper_generator: ^8.1.0
 
- # テスト
-  mocktail: ^0.3.0
-
-  firebase_core: ^1.18.0
-  firebase_auth: ^3.3.20
-  cloud_firestore: ^3.1.18
+  firebase_core: ^3.11.0
+  firebase_auth: ^5.4.2
+  cloud_firestore: ^5.6.3
 
 dev_dependencies:
   flutter_test:
@@ -69,16 +64,17 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
   freezed: ^2.0.3+1
   build_runner: ^2.1.11
+  # テスト
+  mocktail: ^1.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -114,7 +110,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-
-
 # build command
-# fvm flutter packages pub run build_runner build --delete-conflicting-outputs
+# flutter packages pub run build_runner build --delete-conflicting-outputs
