--- a/.github/workflows/flutter-unit-test.yaml
+++ b/.github/workflows/flutter-unit-test.yaml
@@ -22,5 +22,8 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
+      - name: Analyze Code
+        run: flutter analyze
+
       - name: Run tests
         run: flutter test
