--- a/.github/workflows/flutter-analyze-code.yaml
+++ b/.github/workflows/flutter-analyze-code.yaml
@@ -1,4 +1,4 @@
-name: Flutter Unit Tests
+name: Flutter Analyze Code
 
 on:
   pull_request:
@@ -19,5 +19,5 @@ jobs:
       - name: Setup
         uses: ./.github/actions/ci-setup
 
-      - name: Run tests
-        run: flutter test
+      - name: Analyze Code
+        run: flutter analyze
