--- a/.github/workflows/flutter-unit-test.yaml
+++ b/.github/workflows/flutter-unit-test.yaml
@@ -18,6 +18,8 @@ jobs:
 
       - name: Setup
         uses: ./.github/actions/ci-setup
+        with:
+          flutter-root: ${{ github.workspace }}/flutter-sdk
 
       - name: Run tests
         run: flutter test
