--- a/.github/workflows/flutter-unit-test.yaml
+++ b/.github/workflows/flutter-unit-test.yaml
@@ -10,13 +10,15 @@ env:
 
 jobs:
   test:
+    name: Unit Tests
+    timeout-minutes: 10
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup
+      - name: Setup Flutter
         uses: ./.github/actions/ci-setup
         with:
           flutter-root: ${{ github.workspace }}/flutter-sdk
