--- a/.github/workflows/flutter-liint-code.yaml
+++ b/.github/workflows/flutter-liint-code.yaml
@@ -37,27 +37,21 @@ jobs:
       - name: Notify analyze result
         if: always()
         run: |
-          # analysis.txt の各行をパースし、GitHub Actions の notice コマンドで出力
           while IFS='•' read -r level message file_info rule; do
-            # 各フィールドの前後空白を削除
-            level=$(echo "$level" | xargs)
-            message=$(echo "$message" | xargs)
-            file_info=$(echo "$file_info" | xargs)
-            rule=$(echo "$rule" | xargs)
+            level=$(echo "$level" | sed 's/^[[:space:]]*//;s/[[:space:]]*$//')
+            message=$(echo "$message" | sed 's/^[[:space:]]*//;s/[[:space:]]*$//')
+            file_info=$(echo "$file_info" | sed 's/^[[:space:]]*//;s/[[:space:]]*$//')
+            rule=$(echo "$rule" | sed 's/^[[:space:]]*//;s/[[:space:]]*$//')
             
             # 想定の形式でない場合はスキップ
             if [ -z "$file_info" ]; then
               continue
             fi
-
-            # file_info から "ファイルパス:行番号:列番号" の形式で値を取得
+            
             file=$(echo "$file_info" | cut -d ':' -f1)
             line=$(echo "$file_info" | cut -d ':' -f2)
-            # endLine は line と同じ値とする（必要に応じて調整可能）
             endLine=$line
-            # title にはルール名を利用
             title=$rule
 
-            # GitHub Actions のアノテーションコマンドで通知
             echo "::notice file=${file},line=${line},endLine=${endLine},title=${title}::${message}"
           done < analysis.txt
