--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -15,7 +15,7 @@ linter:
     - avoid_bool_literals_in_conditional_expressions
     - avoid_catches_without_on_clauses
     - avoid_catching_errors
-    - avoid_classes_with_only_static_members
+    # - avoid_classes_with_only_static_members
     - avoid_double_and_int_checks
     - avoid_dynamic_calls
     - avoid_field_initializers_in_const_classes
@@ -59,7 +59,7 @@ linter:
     - no_self_assignments
     - noop_primitive_operations
     - omit_local_variable_types
-    - one_member_abstracts
+    # - one_member_abstracts
     - only_throw_errors
     - package_api_docs
     - parameter_assignments
@@ -76,7 +76,7 @@ linter:
     - require_trailing_commas
     - sized_box_shrink_expand
     - sort_constructors_first
-    - sort_pub_dependencies
+    # - sort_pub_dependencies
     - sort_unnamed_constructors_first
     - test_types_in_equals
     - throw_in_finally
