--- a/.github/actions/ci-setup/action.yaml
+++ b/.github/actions/ci-setup/action.yaml
@@ -35,7 +35,7 @@ runs:
       with:
         flutter-version: ${{ inputs.flutter-version }}
         channel: ${{ inputs.flutter-channel }}
-        cahce: true
+        cache: true
         cache-key: "flutter-:os:-:channel:-:version:-:arch:-:hash:"
         cache-path: "${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:"
         pub-cache-key: "flutter-pub:os:-:channel:-:version:-:arch:-:hash:"
