--- a/.github/workflows/flutter-analyze-code.yaml
+++ b/.github/workflows/flutter-analyze-code.yaml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Flutter
-        uses: ./.github/actions/ci-setup
+        uses: ./.github/actions/flutter-setup
         with:
           flutter-root: ${{ github.workspace }}/flutter-sdk
 
